crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_M2N8__00.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: M2N8/00
input: "- ? : x\n"
diagnostics:

cst:
YAML_STREAM@0..8
  YAML_DOCUMENT@0..8
    YAML_BLOCK_SEQUENCE@0..8
      YAML_BLOCK_SEQUENCE_ITEM@0..8
        YAML_BLOCK_SEQ_ENTRY@0..1 "-"
        WHITESPACE@1..2 " "
        YAML_BLOCK_MAP@2..8
          YAML_BLOCK_MAP_ENTRY@2..8
            YAML_BLOCK_MAP_KEY@2..8
              YAML_KEY@2..3 "?"
              WHITESPACE@3..4 " "
              YAML_BLOCK_MAP@4..8
                YAML_BLOCK_MAP_ENTRY@4..8
                  YAML_BLOCK_MAP_KEY@4..5
                    YAML_COLON@4..5 ":"
                  YAML_BLOCK_MAP_VALUE@5..8
                    WHITESPACE@5..6 " "
                    YAML_SCALAR@6..7 "x"
                    NEWLINE@7..8 "\n"
            YAML_BLOCK_MAP_VALUE@8..8
