crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_M2N8__01.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 312
expression: snapshot
---
case_id: M2N8/01
input: "? []: x\n"
diagnostics:

cst:
YAML_STREAM@0..8
  YAML_DOCUMENT@0..8
    YAML_BLOCK_MAP@0..8
      YAML_BLOCK_MAP_ENTRY@0..8
        YAML_BLOCK_MAP_KEY@0..8
          YAML_KEY@0..1 "?"
          WHITESPACE@1..2 " "
          YAML_BLOCK_MAP@2..8
            YAML_BLOCK_MAP_ENTRY@2..8
              YAML_BLOCK_MAP_KEY@2..5
                YAML_FLOW_SEQUENCE@2..4
                  YAML_FLOW_INDICATOR@2..3 "["
                  YAML_FLOW_INDICATOR@3..4 "]"
                YAML_COLON@4..5 ":"
              YAML_BLOCK_MAP_VALUE@5..8
                WHITESPACE@5..6 " "
                YAML_SCALAR@6..7
                  YAML_SCALAR_TEXT@6..7 "x"
                NEWLINE@7..8 "\n"
        YAML_BLOCK_MAP_VALUE@8..8
